@@ -1,3 +1,8 @@
+2020-02-01         John E. Malmberg      <wb8tyw@qsl.net>
+
+	* dfa.c: Remove OpenVMS specific code.  OpenVMS build
+	will generate a stdint.h if needed.
+
 2020-02-01         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* dfa.c: Update from GNULIB. Should help Vax/VMS.
