@@ -1,3 +1,9 @@
+2020-02-04         John E. Malmberg      <wb8tyw@qsl.net>
+
+	* generate_config_vms_h_gawk.com:
+	Create stdint.h if not supplied by OpenVMS and
+	add in the definitions required by support/dfa.h
+
 2020-02-03         John E. Malmberg      <wb8tyw@qsl.net>
 
 	* vmstest.com: Fix some issues where a test failure would stop the
