@@ -1,3 +1,7 @@
+2020-02-04         John E. Malmberg      <wb8tyw@qsl.net>
+
+	* custom.h: Fix OpenVMS SIZE_MAX value.
+
 2020-02-01         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* awk.h, dfa.c: Move include of mbsupport.h to ...
